# agentflow

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_conversations_and_messages.py  0002_create_runs_table.py  0003_create_documents_and_chunks.py  0004_add_document_content_hash.py  0005_create_run_sources_table.py  0006_create_tool_events_table.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: conversations.py  documents.py  health.py  runs.py
apps/api/app/core/: config.py  db.py  openai.py  qdrant.py  redis.py
apps/api/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  run.py  run_source.py  tool_event.py
apps/api/app/repositories/: chunk_repository.py  conversation_repository.py  document_repository.py  message_repository.py  run_repository.py  tool_event_repository.py
apps/api/app/schemas/: __init__.py  conversation.py  document.py  message.py  run.py  tool_event.py
apps/api/app/services/: conversation_service.py  document_service.py  tool_service.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/components/chat/: chat-thread.tsx  conversation-list.tsx  run-detail-panel.tsx  (+1 more)
apps/web/src/lib/: env.ts  navigation.ts
docs/: roadmap.md
docs/api/: README.md
docs/architecture/: README.md
infra/: README.md
scripts/: README.md
(+10 files in other folders)
