[project]
name = "agentflow-api"
version = "0.1.0"
description = "FastAPI backend for the AgentFlow portfolio project."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]
